# ezr

./: .pre-commit-config.yaml  LICENSE  README.md  requirements-dev.txt  setup.cfg
ezr/: __init__.py  ezregex.py  helper.py  quantifier.py  util.py
test/: test_ezquantifier.py
tests/: conftest.py  test_charset.py  test_ezgroup.py  test_ezquantifier.py  test_ezregex.py  test_group.py  test_helper.py  test_operators.py  test_pattern.py  test_quantifier.py  test_range.py  test_util.py
