[metadata]
name = ezr
version = 0.0.1
description = Easier regex expressions for Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fstermann/ezr
author = Fabian Stermann
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[coverage:run]
plugins = covdefaults

[flake8]
extend-ignore = E203

[isort]
force_single_line = True
